# pgtriage

./: LICENSE  README.md  TODO.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/pgaudit/: __init__.py  __main__.py  connection.py  models.py  server.py
src/pgaudit/analyzers/: config_rules.py  explain.py  patterns.py
src/pgaudit/collectors/: config.py  index_health.py  slow_queries.py  table_health.py
src/pgtriage/: __init__.py  __main__.py  server.py
src/pgtriage/analyzers/: config_rules.py  explain.py  patterns.py
src/pgtriage/collectors/: config.py  index_health.py  slow_queries.py  table_health.py
tests/: conftest.py  test_integration_pgbench.py  test_models.py
tests/test_analyzers/: test_config_rules.py  test_explain.py  test_patterns.py
