[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgtriage"
version = "0.1.1"
description = "MCP server for PostgreSQL performance auditing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Manas Maheshwari" }]
keywords = ["postgresql", "mcp", "performance", "audit", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

dependencies = [
    "mcp[cli]>=1.25.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.0",
]

[project.scripts]
pgtriage = "pgtriage:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pgtriage"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14",
]
